# nostr-vpn

./: .env.release.example  .env.zapstore.example  .gitignore  Cargo.toml  Dockerfile.e2e  README.md  docker-compose.e2e.yml  zapstore.yaml
.github/workflows/: ci.yml  release.yml
crates/nostr-vpn-cli/: Cargo.toml
crates/nostr-vpn-cli/src/: diagnostics.rs  main.rs  userspace_wg.rs  windows_tunnel.rs
crates/nostr-vpn-core/: Cargo.toml
crates/nostr-vpn-core/src/: config.rs  control.rs  crypto.rs  diagnostics.rs  join_requests.rs  lib.rs  magic_dns.rs  nat.rs  paths.rs  platform_paths.rs  presence.rs  signaling.rs  wireguard.rs
crates/nostr-vpn-core/tests/: config_tests.rs  crypto_tests.rs  join_requests_e2e.rs  nat_tests.rs  path_tests.rs  presence_tests.rs  signaling_e2e.rs  state_tests.rs
crates/nostr-vpn-gui/: Cargo.toml  package.json  vite.config.ts
crates/nostr-vpn-gui/e2e-tauri/: harness.mjs  join-request.mjs  run.mjs  smoke.mjs
crates/nostr-vpn-gui/scripts/: ios-icons.test.mjs  prepare-sidecar.mjs
crates/nostr-vpn-gui/src/: App.svelte  app.css  main.rs
crates/nostr-vpn-gui/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.windows.conf.json
crates/nostr-vpn-relay/: Cargo.toml
crates/nostr-vpn-relay/src/: main.rs
crates/nostr-vpn-wintun/: Cargo.toml  build.rs
crates/nostr-vpn-wintun/src/: lib.rs
scripts/: e2e-docker.sh  e2e-exit-node-docker.sh  e2e-nat-docker.sh  e2e-tauri-driver-docker.sh  local-release-lib.mjs  local-release.test.mjs  publish-zapstore-android.sh
(+17 files in other folders)
